# irrep

./: .gitignore  INSTALL  MANIFEST.in  README  README.md  bandstructure.py  convertTab.py  gvectors.py  irrep.py  irreptable.py  kpoint.py  pyproject.toml  readfiles.py  requirements.txt  setup.cfg  setup.py  setup_tables.py  spacegroup.py  uploadpypi.sh
.github/workflows/: python-publish.yml  test.yml  tests.yml
data/: 1.cif  10.cif  100.cif  104.cif  106.cif  109.cif  11.cif  110.cif  114.cif  115.cif  116.cif  119.cif  12.cif  120.cif  121.cif  122.cif  124.cif  126.cif  127.cif  128.cif  129.cif  13.cif  131.cif  133.cif  134.cif  135.cif  137.cif  138.cif  139.cif  140.cif  141.cif  142.cif  143.cif  144.cif  145.cif  147.cif  149.cif  15.cif  150.cif  151.cif  (+125 more)
data/sg_$i/: =.in
data/sg_1/: =.in  out
data/sg_10/: =.in  =.str_template  out
data/sg_100/: +groupinfo  +symmetry  =.in  =.str_template  out
data/sg_101/: +symmetry  =.in  (+1 more)
examples/: ref_output  run.sh  run_all.sh
irrep/: __aux.py  __bandstructure.py  __convertTab.py  __gvectors.py  __help.py  __init__.py  __irreptable.py  __kpoint.py  __main__.py  __readfiles.py  __spacegroup.py  __version.py  _version.py  aux.py  bandstructure.py  cli.py  ebrs.py  files.nvim  gvectors.py  kpoint.py  kpoint_gpaw.py  msg_numbers.data  or_solutions_obtainer.py  parse_files_bandstructure.py  readfiles.py  spacegroup.py  spacegroup_irreps.py  symmetry_operation.py  utility.py  wf_overlap.py
irreptables/: MANIFEST.in  README  __convertTab.py  __init__.py  _version.py  setup.cfg  setup.py  uploadpypi.sh
(+3906 files in other folders)
